--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --max-warnings 5 lib/**/*.js",
-    "serve": "http-server -p 8888 -c -1 -i -d -o"
+    "serve": "http-server -p 8888 -c -1 -i -d -o",
+    "updateDocs": "node .bin/updateDocs.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "eslint": "~4.16.0",
     "eslint-plugin-log-filenames": "~1.0.1",
-    "http-server": "~0.11.1"
+    "http-server": "~0.11.1",
+    "pug": "~2.0.3"
   }
 }
