--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "devDependencies": {
     "eslint": "^4.18.2",
     "eslint-plugin-log-filenames": "~1.0.1",
-    "http-server": "~0.11.1",
-    "pug": "~2.0.3"
+    "http-server": "^0.12.3",
+    "pug": "~3.0.2"
   }
 }
